Fix long page title words cut off
close #86

--- a/sites/all/themes/cas/sass/_main.scss
+++ b/sites/all/themes/cas/sass/_main.scss
@@ -868,6 +868,7 @@ html body.navbar-administration.navbar-horizontal
 		text-align:center;
 		font-size:3em;
 		text-shadow:-3px 3px 3px rgba(0,0,0,0.2);
+		word-break:break-word;
 
 		span
 		{
